Changelog
---------

In next release...

- Fixed regression introduced with ``args`` being passed
  in. Incidentally, the name ``args`` was used as the star argument
  name.

1.1.1 (2010/04/06)
------------------

- Fixed issue where arguments were not passed on to template as
  ``args``.

1.1.0 (2010/01/09)
------------------

- Update to combined Chameleon distribution.

1.0.1 (2009/07/06)
------------------

- Bind translation context (request) to translation method. Although
  not required in newer versions of the translation machinery, some
  versions will ask for a translation context in order to negotiate
  language even when a language is explicitly passed in.

- Declare zope security settings for classes when zope.security is present
  as the "class" ZCML directive was moved there.

1.0.0 (2009/07/06)
------------------

- First point release.

1.0b17 (2009/06/14)
-------------------

- Made the Zope security declaration for the repeat dictionary be conditional
  on the presence of zope.app.security instead of zope.app.component.

1.0b16 (2009/05/20)
-------------------

- Updated run-time expression evaluator method to work after a recent
  architectural change in Chameleon. [malthe]

- Check that we have a non-trivial response-object before trying to
  set the content type. [malthe]

- Wrap ``sys.modules`` dictionary in an "opaque" dictionary class,
  such that the representation string does not list all loaded
  modules. [malthe]

1.0b15 (2009/04/24)
-------------------

- Removed lxml extra, as we do no longer depend on it. [malthe]

- Make sure the path expression is a simple string, not
  unicode. [malthe]

- Detect path prefix properly for ViewPageTemplateFile usage in
  doctests. [sidnei]

- The ``template`` symbol is already set by the template base
  class. [malthe]

- Set Content-Type header, for backwards compatibility with
  zope.app.pagetemplate. [sidnei]

1.0b14 (2009/03/31)
-------------------
