@@ -3,6 +3,8 @@ Changelog
 
 In next release...
 
+- Fixed compatibility issue with recent change in Chameleon.
+
 - Fixed regression introduced with ``args`` being passed
   in. Incidentally, the name ``args`` was used as the star argument
   name.
